def/force-app/main/default/objects/Opportunity/fields/First_Fee__c.field-meta.xml
<CustomField>
    <fullName>First_Fee__c</fullName>
    <label>First Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>