def/force-app/main/default/objects/Opportunity/fields/Product_Interest__c.field-meta.xml
<CustomField>
    <fullName>Product_Interest__c</fullName>
    <label>Product Interest</label>
    <length>25</length>
    <type>Text</type>
</CustomField>