def/force-app/main/default/objects/Opportunity/fields/Second_Fee__c.field-meta.xml
<CustomField>
    <fullName>Second_Fee__c</fullName>
    <label>Second Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>