def/force-app/main/default/objects/Opportunity/fields/todayy__c.field-meta.xml
<CustomField>
    <fullName>todayy__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>todayy</label>
    <type>Date</type>
</CustomField>