def/force-app/main/default/objects/Opportunity/recordTypes/Hopkintondell1.recordType-meta.xml
<RecordType>
    <fullName>Hopkintondell1</fullName>
    <active>true</active>
    <businessProcess>Hopkintonsalesprocess</businessProcess>
    <label>Hopkintondell1</label>
</RecordType>