def/force-app/main/default/objects/Opportunity/recordTypes/New_Sales_Process.recordType-meta.xml
<RecordType>
    <fullName>New_Sales_Process</fullName>
    <active>true</active>
    <businessProcess>OnlineDemosp</businessProcess>
    <label>New Sales Process</label>
</RecordType>