def/force-app/main/default/objects/Opportunity/recordTypes/test1test.recordType-meta.xml
<RecordType>
    <fullName>test1test</fullName>
    <active>true</active>
    <businessProcess>Coca Cola SP</businessProcess>
    <label>test1</label>
</RecordType>