def/force-app/main/default/objects/Opportunity/recordTypes/test2.recordType-meta.xml
<RecordType>
    <fullName>test2</fullName>
    <active>true</active>
    <businessProcess>test2</businessProcess>
    <label>test2</label>
</RecordType>