def/force-app/main/default/objects/Opportunity/recordTypes/test5te.recordType-meta.xml
<RecordType>
    <fullName>test5te</fullName>
    <active>true</active>
    <businessProcess>test2</businessProcess>
    <label>test5</label>
</RecordType>