def/force-app/main/default/objects/Opportunity/validationRules/rest.validationRule-meta.xml
<ValidationRule>
    <fullName>rest</fullName>
    <active>false</active>
    <errorConditionFormula>AND( IF(ISNEW() ,true,false),Account.opportunitycount__c &gt; 0)</errorConditionFormula>
    <errorMessage>cannot add more than one opportunity</errorMessage>
</ValidationRule>